# AstraCoreAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: README.md  config.docker.yaml  config.example.yaml  config.yaml
docs/: AstraCoreAI设计文档.md  CONTRIBUTING.md  blog-design-thinking.md  前端SPA设计方案.md  工具循环踩坑记录.md  开发进度规划.md
docs/superpowers/plans/: 2026-04-17-backend-optimization.md  2026-04-17-frontend-rewrite.md  2026-04-17-rag-markdown-editor.md  2026-04-17-unit-tests.md  2026-04-20-skill-system.md  2026-04-22-docker-containerization.md
docs/superpowers/specs/: 2026-04-20-skill-system-design.md
examples/: basic_chat.py  multi_agent.py  rag_example.py  run_service.py  skill_with_tools.py  tool_calling.py
frontend/: .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: global.css  main.tsx
frontend/src/app/: App.tsx  router.tsx  theme.ts
frontend/src/components/chat/: ChatMain.tsx  ConversationSidebar.tsx  MarkdownContent.tsx  ModelSelector.tsx
frontend/src/components/rag/: RagIndexPanel.tsx  RagMarkdownEditor.tsx  RagQueryPanel.tsx  RagResultList.tsx
frontend/src/components/skills/: GlobalInstructionEditor.tsx  SkillCard.tsx  SkillModal.tsx  SkillSelector.tsx
frontend/src/components/system/: HealthStatusCard.tsx
frontend/src/layouts/: AppShell.tsx
frontend/src/pages/: ChatPage.tsx  RagPage.tsx  SkillsPage.tsx  SystemPage.tsx
frontend/src/services/: apiClient.ts  chatService.ts  conversationService.ts  healthService.ts  ragService.ts  skillService.ts  systemService.ts
frontend/src/stores/: chatStore.ts  settingsStore.ts  skillStore.ts
frontend/src/types/: api.ts  chat.ts  skill.ts  system.ts
scripts/: predownload_chroma_model.py
src/astracore/: __init__.py
src/astracore/adapters/: __init__.py
src/astracore/adapters/db/: models.py  session.py
src/astracore/core/: __init__.py
src/astracore/mcp_servers/: shell_server.py
src/astracore/runtime/: __init__.py
src/astracore/sdk/: __init__.py  client.py  config.py  model_capabilities.py
src/astracore/service/: __init__.py  builtin_tools.py  chat_orchestrator.py  prompt_utils.py  seeds.py
tests/: conftest.py
tests/adapters/: test_mcp.py
tests/adapters/llm/: test_anthropic.py  test_openai.py
tests/adapters/memory/: test_hybrid_memory.py
tests/adapters/workflow/: test_native_workflow.py
tests/core/application/: test_chat.py  test_rag.py  test_tool_loop.py
tests/core/domain/: test_domain_models.py  test_session.py
tests/runtime/: test_policy_engine.py  test_security_validator.py
tests/sdk/: test_config.py
tests/service/: test_skills.py  test_stream_session_safety.py
(+67 files in other folders)
