[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astracore-ai"
version = "0.1.0"
description = "Enterprise-grade Python AI framework with Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AstraCore Team", email = "team@astracore.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "tenacity>=8.5.0",
    "sqlalchemy>=2.0.31",
    "greenlet>=3.0.3",
    "alembic>=1.13.2",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.7",
    "fastapi>=0.111.1",
    "uvicorn[standard]>=0.30.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.2",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.1",
    "ruff>=0.5.0",
    "httpx-sse>=0.4.0",
    "fastmcp>=3.0.0",
]
openai = [
    "openai>=1.35.7",
]
anthropic = [
    "anthropic>=0.31.1",
]
vector = [
    "chromadb>=0.5.3",
    "sentence-transformers>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/astracore/astracore-ai"
Documentation = "https://docs.astracore.ai"
Repository = "https://github.com/astracore/astracore-ai"

[tool.hatch.build.targets.wheel]
packages = ["src/astracore"]

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/astracore --cov-report=term-missing {args:tests}"
type-check = "mypy src/astracore"
lint = "ruff check src/astracore tests"
format = "ruff format src/astracore tests"
check = ["lint", "type-check"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["astracore"]
